# chess

./: Cargo.toml
.github/workflows/: build_release.yml  every_push.yml
chess-cli/: Cargo.toml
chess-cli/src/: main.rs
chess-lib/: Cargo.toml
chess-lib/src/: piece.rs
chess-lib/src/board/: mod.rs
chess_cli/: Cargo.toml
chess_cli/src/: main.rs
chess_derives/: Cargo.toml
chess_derives/src/: lib.rs
chess_lib/src/: error.rs  lib.rs  piece.rs
chess_lib/src/board/: board_layout.rs  mailbox.rs  mod.rs
docs/: Game flow chart.odg
src/: main.rs  piece.rs
src/board/: board_layout.rs  board_layouts.rs  mod.rs
