[workspace]

members = ["chess-lib", "chess-cli"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
debug = false
overflow-checks = false
panic = "abort"
